Build initial 2026 site.

--- a/2026/Gemfile
+++ b/2026/Gemfile
@@ -6,6 +6,9 @@ gem "jekyll", "~> 4.3"
 # Theme
 gem "minima", "~> 2.5"
 
+# Ruby 3.4+ compatibility
+gem "logger"
+
 # Plugins
 group :jekyll_plugins do
   gem "jekyll-feed", "~> 0.12"
