--- a/2026/_config.yml
+++ b/2026/_config.yml
@@ -26,8 +26,8 @@ salon:
   date: "January 15, 2026"
   time: "6:00 PM"
   title: "Elevated Cuisine: The Science and Art of Cooking at Altitude"
-  venue: "Colorado Mountain College Culinary Program"
-  location: "Breckenridge, Colorado"
+  venue: "EVO3 Workspace"
+  location: "620 E Main St #6, Frisco, CO 80443"
   price: "$10 suggested donation"
   description: "Join the culinary team from Colorado Mountain College as they explore how altitude changes the rules of cooking and baking—and what it takes to master flavor, texture, and technique in the High Rockies."
 
