--- a/website/Gemfile
+++ b/website/Gemfile
@@ -29,3 +29,8 @@ gem "wdm", "~> 0.1.1", :platforms => [:mingw, :x64_mingw, :mswin]
 
 # Lock `http_parser.rb` gem to `v0.6.x` on JRuby builds
 gem "http_parser.rb", "~> 0.6.0", :platforms => [:jruby]
+
+# Testing
+group :test do
+  gem "html-proofer", "~> 5.0"
+end
