Add Google Analytics tracking.

--- a/website/_config.yml
+++ b/website/_config.yml
@@ -98,4 +98,4 @@ tagline: Ideas worth spreading in the heart of the Rockies
 locale: en_US
 
 # Analytics (add your tracking IDs)
-google_analytics: ""
+google_analytics: "G-GC96T5JBVS"
