Fix config for pa11y-ci.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Build Jekyll site for testing
         working-directory: website
-        run: bundle exec jekyll build --config _config.yml,_config.dev.yml
+        run: bundle exec jekyll build --config _config.yml
 
       - name: Validate image sizes
         run: ./build/website/validate-images.sh
