--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "test:css": "stylelint \"website/assets/css/**/*.css\"",
     "test:a11y": "pa11y-ci --sitemap http://localhost:4000/sitemap.xml",
-    "serve": "cd website/_site && serve -l 4000"
+    "serve": "cd website/_site && serve -l 4000",
+    "emails:preview": "node emails/generate-previews.js"
   },
   "devDependencies": {
+    "js-yaml": "^4.1.0",
     "pa11y-ci": "^4.0.0",
     "serve": "^14.2.3",
     "stylelint": "^16.10.0",
