Fix youtube link.

--- a/website/_config.yml
+++ b/website/_config.yml
@@ -59,7 +59,7 @@ social:
   name: TEDxBreckenridge
   facebook: tedxbreckenridge
   instagram: tedxbreckenridge
-  youtube: tedxbreckenridge
+  youtube: "@tedxbreckenridge"
 
 # Facebook/Open Graph Settings
 facebook:
