--- a/website/_data/email_preview.yml
+++ b/website/_data/email_preview.yml
@@ -29,3 +29,22 @@ LIST: "true"
 
 # Date/time
 CURRENT_YEAR: "2026"
+
+# Preview-only content (shown in preview, stripped from source)
+# Use *|PREVIEW_...|* in templates - these get replaced in preview
+# but removed entirely from the HTML source for Mailchimp
+PREVIEW_PREHEADER: "Preview text that appears in the inbox before opening the email."
+PREVIEW_CTA_URL: "https://tedxbreckenridge.com"
+PREVIEW_CTA_TEXT: "Learn More"
+PREVIEW_BODY: |
+  <p style="margin: 0 0 24px 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #2A2A2A;">
+      We wanted to reach out with some exciting news from TEDxBreckenridge. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  </p>
+
+  <p style="margin: 0 0 24px 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #2A2A2A;">
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+  </p>
+
+  <p style="margin: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #2A2A2A;">
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
