Add static check to validate all ticketsauce links have affiliate tracking.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,3 +77,6 @@ jobs:
           sleep 5
           yarn test:a11y
           kill $SERVER_PID
+
+      - name: Validate affiliate tracking links
+        run: ./build/website/validate-affiliate-links.sh
