Add a github actions check to make sure QR codes have descriptive comments.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -80,3 +80,6 @@ jobs:
 
       - name: Validate affiliate tracking links
         run: ./build/website/validate-affiliate-links.sh
+
+      - name: Validate QR code documentation
+        run: ./build/website/validate-qr-codes.sh
