--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -83,3 +83,6 @@ jobs:
 
       - name: Validate QR code documentation
         run: ./build/website/validate-qr-codes.sh
+
+      - name: Validate Event structured data
+        run: ./build/website/validate-structured-data.sh
