--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "test:css": "stylelint \"assets/css/**/*.css\"",
-    "test:a11y": "pa11y-ci --sitemap http://localhost:4000/sitemap.xml",
+    "test:a11y": "bundle exec jekyll build --config _config.yml,_config.test.yml && pa11y-ci --sitemap http://localhost:4000/sitemap.xml",
     "serve": "serve _site -l 4000"
   },
   "devDependencies": {
